# quant-pilot

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  database.py  main.py  pyproject.toml
backend/models/: __init__.py  signal_history.py  trading.py  watchlist.py
backend/routers/: __init__.py  dashboard.py  market.py  signals.py  strategy.py  trading.py  watchlist.py
backend/schemas/: __init__.py  dashboard.py  market.py  signal.py  signal_history.py  strategy.py  trading.py  watchlist.py
backend/services/: backtest.py  market_history.py  quotes.py  scheduler.py  signal_history.py  signals.py  tencent_kline.py  trading.py
backend/services/strategies/: base.py  bollinger.py  dual_ma.py  kdj.py  macd.py  rsi.py
backend/tests/: conftest.py  test_app_configuration.py  test_backtest.py  test_dashboard.py  test_market.py  test_market_history.py  test_quotes.py  test_signal_history_service.py  test_signals.py  test_signals_endpoints.py  test_strategies.py  test_strategy_endpoints.py  test_trading_service.py  test_watchlist.py
frontend/: app.json  global.css  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: _layout.tsx  modal.tsx
frontend/app/(tabs)/: _layout.tsx  ai.tsx  index.tsx  market.tsx  paper-trading.tsx  strategy.tsx
frontend/components/: numeric-text.tsx  pill-selector.tsx  section-card.tsx  skeleton-block.tsx
frontend/hooks/: use-trade-submission.ts
frontend/lib/: api.ts  i18n.ts  market-search.ts  navigation.ts  preferences.ts  routes.ts  theme-context.tsx  theme.ts
frontend/locales/: en.json  zh-CN.json
frontend/tests/: theme-and-routes.test.mjs
(+23 files in other folders)
