[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "uvicorn>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.15.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
